--- a/directive/soundcloud/soundcloud-new-track.less
+++ b/directive/soundcloud/soundcloud-new-track.less
@@ -1,6 +1,7 @@
 #Soundcloud {
-    width: 300px;
-    iframe { height: 50vh !important; }
-    .overlay(@bottom: 50vh, @top:0);
-
+    width: 100vw;
+    iframe {
+        height: @widget_height !important;
+        width: 100vw !important;
+    }
 }
