--- a/partials/home.less
+++ b/partials/home.less
@@ -1,9 +1,14 @@
 #Home {
     position: relative;
 	height:95vh;
-    >.rs-link {
+    > .self-ads {
+        .overlay(@top: auto);
+    }
+    // mobile link switch to desktop
+    > .rs-link {
         .overlay(@top:auto, @bottom: 200px);
     }
+
 }
 
 
