--- a/partials/social.html
+++ b/partials/social.html
@@ -1,4 +1,4 @@
-<div id="Network">
+<div data-ng-if="false" id="Network">
     <br>
     <!-- Facebook -->
     <button style="background-color:#3A5795;width:100%;"
@@ -71,5 +71,5 @@
     <div id="container" data-ng-if="should_display_tweet === true">
         <div data-twitter-feed></div>
     </div>
-
 </div>
+<h1> Coming Soon...</h1>
