--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,9 @@
 <div id="Home">
     <div data-ui-view></div>
-    <div data-soundcloud-new-track></div>
-    <div data-twitter-feed></div>
+    <div class="self-ads">
+        <div data-soundcloud-new-track></div>
+        <div data-twitter-feed></div>
+    </div>
     <!-- <button class="submit-button rs-link"
         data-ng-if="model.is_mobile"
         data-ng-click="model.is_mobile = !model.is_mobile"
