Added modal styles.

--- a/css/app.less
+++ b/css/app.less
@@ -308,3 +308,12 @@ canvas#grapher {
     box-shadow:         inset 1px 1px 15px @lime_green;
     border-color: @lime_green;
 }
+
+.modal-confirmation {
+    padding: @standard_padding;
+    button {
+        padding: 15px;
+        border-radius: 15px;
+        width: 100%;
+    }
+}
