Made additional improvements for the asynchronous calls on the contact send email. Display a loading view until we receive a response.

--- a/css/app.less
+++ b/css/app.less
@@ -14,6 +14,7 @@
 @import "../directive/footer/home-footer.less";
 @import "../directive/instagram.less";
 @import "../directive/nav-bar/nav-bar.less";
+@import "../directive/overlay/loading.less";
 @import "../directive/playlist/playlist.less";
 @import "../directive/vertical-menu/vertical-menu.less";
 @import "../directive/twitter/twitter-feed.less";
