--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,7 @@
 <div id="Home">
     <div data-ui-view></div>
     <div class="self-ads">
+    <div data-instagram></div>
         <div data-soundcloud-new-track></div>
         <div data-twitter-feed></div>
     </div>
