--- a/partials/home.less
+++ b/partials/home.less
@@ -2,7 +2,7 @@
     position: relative;
 	height:95vh;
     > .self-ads {
-        .overlay(@top: auto);
+        // .overlay(@top: auto);
     }
     // mobile link switch to desktop
     > .rs-link {
