--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,6 @@
 <div id="Home">
-    <div data-ui-view></div>
+    <!-- <div data-ui-view></div> -->
+    <div data-gear-slide></div>
     <div class="self-ads">
         <div data-soundcloud-new-track></div>
         <div data-twitter-feed></div>
