Additional improvements on the gear slide.

--- a/directive/gear/gear.less
+++ b/directive/gear/gear.less
@@ -4,6 +4,7 @@
     background-color: rgba(0,0,0, .5);
     padding: 25px 15px;
     height: 300px;
+    overflow: hidden;
     .mobile & { height: auto; }
     > .studio-gear {
         .box(center);
