Improved the transition in between the slides. Added hot keys  for keyboard navigation.

--- a/directive/gear/gear.less
+++ b/directive/gear/gear.less
@@ -7,6 +7,8 @@
     overflow: hidden;
     .mobile & { height: auto; }
     > .studio-gear {
+        height: 100%;
+        overflow: hidden;
         .box(center);
         > .content {
             display: inline;
