--- a/css/app.less
+++ b/css/app.less
@@ -17,6 +17,7 @@
 @import "../directive/nav-bar/nav-bar.less";
 @import "../directive/overlay/loading.less";
 @import "../directive/playlist/playlist.less";
+@import "../directive/rss-feed/rss-feed.less";
 @import "../directive/vertical-menu/vertical-menu.less";
 @import "../directive/twitter/twitter-feed.less";
 @import "../directive/soundcloud/soundcloud-new-track.less";
@@ -64,6 +65,7 @@ hr {
     width:100vw;
 }
 [data-ui-view] {
+    padding: 15px;
     overflow-y: scroll;
     overflow-x: hidden;
     .overlay(@top: @nav_height, @bottom: @nav_height);
