--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,11 @@
 <div id="Home">
     <!-- <div data-ui-view></div> -->
+    <hr>
     <div data-gear-slide></div>
     <div class="self-ads">
+        <hr>
+        <div data-rss-feed></div>
+        <hr>
         <div data-soundcloud-new-track></div>
     </div>
     <!-- <button class="submit-button rs-link"
