--- a/directive/rss-feed/rss-feed.less
+++ b/directive/rss-feed/rss-feed.less
@@ -15,6 +15,7 @@
         > .contentSnippet {
             padding: 15px;
             max-width: 100vw;
+            img { max-width: 50vw; max-height: 30vh; }
 
         }
     }
