Added additional rss feeds in the home page.

--- a/partials/engineering.html
+++ b/partials/engineering.html
@@ -1,4 +1,5 @@
 <div id="Engineering">
     <h1>This Page is not Yet Available</h1>
+    <div data-gear-slide></div>
     <data-vertical-menu></data-vertical-menu>
 </div>
