--- a/directive/rss-feed/rss-feed.less
+++ b/directive/rss-feed/rss-feed.less
@@ -1,13 +1,13 @@
 #RssFeed {
     padding: 15px;
     position: relative;
+    min-height: 150px;
     > .content {
-        color: white;
         font-size: 18px;
-        > .date { color: #ccc; }
+        padding: 5px;
+        > .date,
         > .title {
-            margin-left: 10px;
-
+            margin-left: 15px;
         }
         > .image-thumbnail {
 
@@ -15,6 +15,7 @@
         > .contentSnippet {
             padding: 15px;
             max-width: 100vw;
+            color: #fff;
             img { max-width: 50vw; max-height: 30vh; }
 
         }
@@ -27,7 +28,14 @@
         margin: 10px 0;
         .overlay();
         .opacityTransition(@time: 1s);
-        &:hover { color: #fff; }
+        .overlayBackground();
+        &:hover {
+            color: #fff;
+            -webkit-box-shadow: inset 1px 1px 20px 10px rgba(192,192,192, 0.2) !important;
+            -o-box-shadow: inset 1px 1px 20px 10px rgba(192,192,192, 0.2) !important;
+            -moz-box-shadow: inset 1px 1px 20px 10px rgba(192,192,192, 0.2) !important;
+            box-shadow: inset 1px 1px 20px 10px rgba(192,192,192, 0.2) !important;
+        }
     }
     &:hover { > button.direction { opacity: 1; color: #ccc; } }
 
