--- a/css/app.less
+++ b/css/app.less
@@ -9,6 +9,7 @@
 @import "../modals/purchase-modal.less";
 @import "../modals/gear.less";
 
+@import "../directive/artist-api.less";
 @import "../directive/artist-lookup/artist-lookup.less";
 @import "../directive/artist-content/artist-content.less";
 @import "../directive/footer/home-footer.less";
@@ -86,9 +87,7 @@ button {
         outline: none;
         border-radius: 5px;
         border: 1px solid #444;
-        -moz-box-shadow:    inset 0 0 40px #444;
-        -webkit-box-shadow: inset 0 0 40px #444;
-        box-shadow:         inset 0 0 40px #444;
+        .insetBoxShadow();
         &:hover {
             color: @lime_green;
         }
@@ -118,10 +117,7 @@ button {
         &.active {
             background: @blue;
             border-bottom: 1px solid @lime_green;
-            -webkit-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-            -o-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-            -moz-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-            box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+            .insetBoxShadow();
 
         }
 
@@ -310,17 +306,18 @@ canvas#grapher {
         }
     }
 }
-
+.insetBoxShadow(@shaddow: 4px, @blur: 20px, @spread: 4px, @color: rgba(0,0,0,0.49)) {
+    -webkit-box-shadow: inset @shaddow @shaddow @blur @spread @color !important;
+    -o-box-shadow: inset @shaddow @shaddow @blur @spread @color !important;
+    -moz-box-shadow: inset @shaddow @shaddow @blur @spread @color !important;
+    box-shadow: inset @shaddow @shaddow @blur @spread @color !important;
+}
 .invalid() {
-    -moz-box-shadow:    inset 1px 1px 15px @red;
-    -webkit-box-shadow: inset 1px 1px 15px @red;
-    box-shadow:         inset 1px 1px 15px @red;
+    .insetBoxShadow(@shaddow:1px, @color: @red);
     border-color: @red;
 }
 .valid() {
-    -moz-box-shadow:    inset 1px 1px 15px @lime_green;
-    -webkit-box-shadow: inset 1px 1px 15px @lime_green;
-    box-shadow:         inset 1px 1px 15px @lime_green;
+    .insetBoxShadow(@shaddow:1px, @color: @lime_green);
     border-color: @lime_green;
 }
 .opacityTransition(@time: 500ms) {
@@ -353,11 +350,47 @@ canvas#grapher {
 
 
 
-.modal-confirmation {
+.confirmation-dialog-container {
     padding: @standard_padding;
+    background-color: #000!important;
+
     button {
         padding: 15px;
         border-radius: 15px;
         width: 100%;
     }
+}
+.modal {
+    cursor: default;
+    outline:none;
+    display: -webkit-box!important;
+    top: @nav_height!important;
+    bottom: @nav_height!important;
+    &.fade {
+        .modal-dialog {
+            .overlay(@top: 45px; @right:auto;);
+        }
+    }
+    // .modal-backdrop.in { opacity: 1 !important; }
+    .modal-content {
+        width: 100vw;
+        height: 100vh;
+        .overlayBackground();
+        border: none!important;
+        padding: none!important;
+        .insetBoxShadow(@shaddow: 20vh, @blur: 100vh, @spread: 10vw);
+        border: 2px solid @dark_gray;
+        padding: 15px;
+        border-radius: 10px;
+        > .close-button { float: right; }
+    }
+}
+
+#FacebookSharedLike {
+    z-index:1;
+    margin-top: 15px;
+    width: 100px;
+    height: 30px;
+    .overlay(@top: @nav_height + 10, @left: auto);
+
 }
