--- a/partials/home.less
+++ b/partials/home.less
@@ -1,11 +1,11 @@
 #Home {
     position: relative;
     padding-top:  50px;
-	height: 100%;
+	height: 100vh;
 
     > #Soundcloud {
         margin-top: 10px;
-        .overlay(@top:auto);
+        // .overlay(@top:auto);
     }
     // mobile link switch to desktop
     > .rs-link {
