--- a/directive/artist-content/artist-content.less
+++ b/directive/artist-content/artist-content.less
@@ -2,8 +2,10 @@
     height: 75vh;
     margin-top: 56px;
     overflow: scroll;
+    padding: 15px;
+    .overlay(@top: 65px;);
     > .text-input {
-        .overlay(@top: 34px);
+        // .overlay(@top: 34px);
     }
     > .list-container {
         width: 200px;
@@ -20,7 +22,6 @@
         }
 
     }
-
 }
 
 .rotate() {
