--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -3,17 +3,7 @@
 }
 #table-list {
 	height: 80vh;
-    width: 100vw;
-    &:not(:hover) {
-	    background: none;
-
-    }
-    &:hover {
-    	-webkit-box-shadow: inset 4px 10px 119px 100px rgba(0,0,0,0.75);
-		-moz-box-shadow: inset 4px 10px 119px 100px rgba(0,0,0,0.75);
-		box-shadow: inset 4px 10px 119px 100px rgba(0,0,0,0.75);
-    }
-
+	.overlay(@top: @nav_height, @right: 15px, @bottom: @nav_height, @left: 15px);
     > .hide-btn {
     	width: 100vw;
         border-right: none;
@@ -24,17 +14,16 @@
     }
 }
 .table-list {
-	.overlay(@top:185px);
+	margin-top: 100px;
     min-height: 20vh;
     max-height: 60vh;
 	>.playlist {
-		min-width: 850px;
+		width: 100%;
 		opacity: 1;
 		padding: 0;
 
 		li {
-			.pattern();
-			width: 100vw;
+			.insetBoxShadow();
 			line-height: 30px;
 			list-style: none;
 			padding: 10px 20px;
@@ -86,12 +75,14 @@
 }
 
 div#mp3_player{
-	width:100%;
 	position: absolute;
 }
 div#mp3_player > div > audio {
 	width:100vw;
     -webkit-filter: drop-shadow(0 0 2em blue);
+    -moz-filter: drop-shadow(0 0 2em blue);
+    -o-filter: drop-shadow(0 0 2em blue);
+    filter: drop-shadow(0 0 2em blue);
 }
 div#mp3_player > canvas {
     width: 100%;
