--- a/directive/rss-feed/rss-feed.less
+++ b/directive/rss-feed/rss-feed.less
@@ -2,6 +2,10 @@
     padding: 15px;
     position: relative;
     min-height: 150px;
+    max-height: 90vh;
+    overflow: hidden;
+    // Dont Show Duplicated elements.
+    & + & { display: none; }
     > .content {
         font-size: 18px;
         padding: 5px;
@@ -16,7 +20,11 @@
             padding: 15px;
             max-width: 100vw;
             color: #fff;
-            img { max-width: 50vw; max-height: 30vh; }
+            img {
+                max-width: 50vw;
+                max-height: 30vh;
+                display: block;
+            }
 
         }
     }
