Updated the vertical menu inset shadow.

--- a/directive/vertical-menu/vertical-menu.less
+++ b/directive/vertical-menu/vertical-menu.less
@@ -7,6 +7,7 @@
     .transition( @time: 500ms);
     .overlay(@top: @nav_height + 10px; @right: auto;);
     .overlayBackground();
+    .insetBoxShadow(@shaddow: 70vh, @blur: 100vh, @spread: 50vw, @color: rgba(0,0,0,0.8));
     &.is-open { width: 100vw; }
     &:hover { opacity: 1; }
 
