Made additional improvements on the overall ui.

--- a/css/app.less
+++ b/css/app.less
@@ -385,12 +385,14 @@ canvas#grapher {
         > .close-button { float: right; }
     }
 }
+#SocialMediaShare {
+    .box(center);
+    #FacebookSharedLike {
+        z-index:1;
+        margin-top: 15px;
+        width: 100px;
+        height: 30px;
+        // .overlay(@top: @nav_height + 10, @left: 45%, @right: auto);
 
-#FacebookSharedLike {
-    z-index:1;
-    margin-top: 15px;
-    width: 100px;
-    height: 30px;
-    .overlay(@top: @nav_height + 10, @left: auto);
-
+    }
 }
