--- a/directive/artist-content/artist-content.less
+++ b/directive/artist-content/artist-content.less
@@ -1,9 +1,6 @@
 #ArtistContent {
     height: 75vh;
-    margin-top: 56px;
-    overflow: scroll;
-    padding: 15px;
-    .overlay(@top: 65px;);
+    overflow-y: scroll;
     > .text-input {
         // .overlay(@top: 34px);
     }
