--- a/directive/soundcloud/soundcloud-new-track.less
+++ b/directive/soundcloud/soundcloud-new-track.less
@@ -1,7 +1,8 @@
 #Soundcloud {
-    width: 100vw;
+    .overlay(@top:auto);
+    .box(center);
     iframe {
         height: @widget_height !important;
-        width: 100vw !important;
+        width: 90vw !important;
     }
 }
