--- a/partials/home.html
+++ b/partials/home.html
@@ -1,16 +1,13 @@
 <div id="Home">
     <!-- <div data-ui-view></div> -->
-    <!--  -->
-    <!-- <div data-rss-feed data-news="'http://studiodrecording.com/feed'"></div> -->
-    <!-- <div data-rss-feed data-news="'http://stereoklang.se/blog/feed'"></div> -->
-    <div data-rss-feed data-news="'https://www.moogmusic.com/blog/feed'"></div>
-    <div data-rss-feed data-news="'http://feeds.feedburner.com/TechCrunch/Google'"></div>
-    <div data-rss-feed data-news="'http://feeds.feedburner.com/TechCrunch/Apple'"></div>
     <div data-soundcloud-new-track></div>
-    <button class="submit-button rs-link"
+    <!-- <button class="submit-button rs-link"
         data-ng-if="model.is_mobile"
         data-ng-click="model.is_mobile = !model.is_mobile"
         data-link-desktop="Switch to desktop version">
         Switch to desktop version
-    </button>
+    </button> -->
+    <!-- <div data-rss-feed data-news="''"> -->
+
+    </div>
 </div>
