--- a/partials/home.less
+++ b/partials/home.less
@@ -2,11 +2,11 @@
     position: relative;
     padding-top:  50px;
 	height: 100vh;
+    background-image: url("http://res.cloudinary.com/www-drvaudio-com/image/upload/v1468307219/studio_g55jnz.png");
+    background-size: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
 
-    > #Soundcloud {
-        margin-top: 10px;
-        // .overlay(@top:auto);
-    }
     // mobile link switch to desktop
     > .rs-link {
         .overlay(@top:auto, @bottom: 200px);
