--- a/directive/vertical-menu/vertical-menu.less
+++ b/directive/vertical-menu/vertical-menu.less
@@ -1,28 +1,45 @@
 .vertical-menu {
-    width: 0;
-    opacity: .3;
-    height: 100%;
-    padding-top: @standard_padding;
+    width: 100vw;
+    height: 100vh;
     text-align: center;
+    &:not(.is-closed) {
+        overflow-y: scroll;
+    }
     .transition( @time: 500ms);
-    .overlay(@top: @nav_height + 10px; @right: auto;);
+    .overlay(@top: @nav_height + 10px;);
     .overlayBackground();
-    .insetBoxShadow(@shaddow: 70vh, @blur: 100vh, @spread: 50vw, @color: rgba(0,0,0,0.8));
-    &.is-open { width: 100vw; }
+    .desktop & {
+        .insetBoxShadow(@shaddow: 90vh, @blur: 100vh, @spread: 20vw, @color: rgba(0,0,0,0.8));
+    }
+    .mobile & {
+        background-color: rgba(0,0,0,0.95);
+    }
+    &.is-closed { width: 0; }
     &:hover { opacity: 1; }
 
     // Indicator
     > .nav-indicator {
-        .overlay(@top: @standard_padding; @left: auto; @right: -55px;);
-        font-size: 55px;
+        .overlay(@top: 10px; @left: auto; @right: -55px;);
+        font-size: 35px;
         color: @lime_green;
         cursor: pointer;
+        .transition( @time: 300ms);
         &.fa-reply { right: 0; }
+        &:hover { font-size: 55px; }
     }
     // Content
     > .content {
+        height: 100%;
+        overflow-y: scroll;
         > .nav-header { color: #fff; }
         > .action-btn {
+            text-shadow: -2px -1px 2px @light_blue;
+            width: 100%;
+            background: none;
+            white-space: normal;
+            font-family: "Arial Black", Gadget, sans-serif;
+            font-size:  28px;
+            &.bottom{ margin-top: 30px; }
             &:hover {
                 background: rgba(32,32,32,.7);
             }
@@ -35,16 +52,10 @@
                     text-shadow: -4px -1px 2px @light_blue;
                 }
             }
-            text-shadow: -2px -1px 2px @light_blue;
             &:hover {
                 text-shadow: -4px -1px 2px @lime_green;
             }
-            width: 100%;
-            background: none;
-            font-size: 18px;
-            white-space: normal;
 
-            font-family: "Arial Black", Gadget, sans-serif;
 
         }
 
