--- a/directive/rss-feed/rss-feed.less
+++ b/directive/rss-feed/rss-feed.less
@@ -1,12 +1,15 @@
 #RssFeed {
     padding: 15px;
+    .mobile & { padding: 5px; }
     position: relative;
+    width: 100%;
     min-height: 150px;
     max-height: 90vh;
-    overflow: hidden;
+    overflow-y: scroll;
     // Dont Show Duplicated elements.
     & + & { display: none; }
     > .content {
+        text-align: center;
         font-size: 18px;
         padding: 5px;
         > .date,
@@ -20,10 +23,13 @@
             padding: 15px;
             max-width: 100vw;
             color: #fff;
-            img {
-                max-width: 50vw;
-                max-height: 30vh;
-                display: block;
+            > p > a {
+                .box(center);
+                img {
+                    max-width: 100vw;
+                    max-height: 30vh;
+                    display: block;
+                }
             }
 
         }
@@ -41,6 +47,7 @@
             color: #fff;
             .insetBoxShadow();
         }
+        .mobile { display: none; }
     }
     &:hover { > button.direction { opacity: 1; color: #ccc; } }
 
@@ -48,21 +55,29 @@
     > button.fa-arrow-left { right: auto; }
     .indicators {
         .box(center);
-        height: 20px;
+        height: 55px;
+        width: 95%;
+        text-align: center;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        line-height: 25px;
+        padding: 0 15px 0 15px;
         > .indicator {
-            width: 15px;
-            height: 15px;
-            cursor:pointer;
+            width: 25px;
+            height: 25px;
+            cursor: pointer;
             margin: 20px 10px;
             border-radius: 100%;
-            display:inline-block;
             background: #ccc;
             border: none;
+            vertical-align: middle;
+            text-align: center;
             &:focus {
                 background-color: @blue;
             }
             &.active {
-                background-color: @lime_green;
+                background-color: @blue;
+                color: #ccc;
             }
         }
     }
