--- a/directive/rss-feed/rss-feed.less
+++ b/directive/rss-feed/rss-feed.less
@@ -23,15 +23,14 @@
             padding: 15px;
             max-width: 100vw;
             color: #fff;
-            > p > a {
-                .box(center);
-                img {
-                    max-width: 50vw;
-                    max-height: 30vh;
-                    display: block;
-                }
-            }
-
+        }
+    }
+    a {
+        .box(center);
+        img {
+            max-width: 50vw;
+            max-height: 50vh;
+            display: block;
         }
     }
     &.mobile > button.direction { display: none; }
