Added auto width and height for rss content images.

--- a/directive/rss-feed/rss-feed.less
+++ b/directive/rss-feed/rss-feed.less
@@ -28,6 +28,8 @@
     a {
         .box(center);
         img {
+            height: auto;
+            width: auto;
             max-width: 50vw;
             max-height: 50vh;
             display: block;
