--- a/directive/vertical-menu/vertical-menu.less
+++ b/directive/vertical-menu/vertical-menu.less
@@ -24,12 +24,12 @@
         color: @lime_green;
         cursor: pointer;
         .transition( @time: 300ms);
-        &.fa-reply { right: 0; }
+        &.fa-times-circle-o { right: 15px; }
         &:hover { font-size: 55px; }
     }
     // Content
     > .content {
-        height: 100%;
+        height: 80%;
         overflow-y: scroll;
         > .nav-header { color: #fff; }
         > .action-btn {
