Made additional important changes and improvements.

--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -20,7 +20,6 @@
 	>.playlist {
 		width: 100%;
 		opacity: 1;
-		padding: 0;
 
 		li {
 			.insetBoxShadow();
@@ -48,9 +47,7 @@
 					cursor: pointer;
 				}
 			}
-			.fa-music { font-size: 20px; vertical-align: super; }
-			.play-controls {
-				float: right;
+			> .play-controls {
 				font-size: 30px;
 				padding-left: 15px;
 				&:hover{
