--- a/directive/vertical-menu/vertical-menu.less
+++ b/directive/vertical-menu/vertical-menu.less
@@ -23,6 +23,7 @@
         font-size: 35px;
         color: @lime_green;
         cursor: pointer;
+        max-height: 50px;
         .transition( @time: 300ms);
         &.fa-times-circle-o { right: 15px; }
         &:hover { font-size: 55px; }
