Improvements on the UI / Playlist directive. Added waveform to the tracks.json

--- a/css/app.less
+++ b/css/app.less
@@ -205,7 +205,7 @@ canvas#grapher {
     -moz-box-oent: @orient;
 
 }
-.pattern(){
+.pattern() {
     background-image: -moz-linear-gradient(
 	    	45deg, rgba(0, 0, 0, 0.25) 25%,
 	    	transparent 25%, transparent 75%,
@@ -348,6 +348,15 @@ canvas#grapher {
     -moz-box-orient: vertical;
     -o-box-orient: vertical;
 }
+// Shared Classes
+.vertical-divider {
+    height: 100%;
+    width: .5px;
+    background-color: #fff;
+    opacity: .5;
+}
+
+
 //
 // Social Media
 //
