--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,6 @@
 <div id="Home">
     <!-- <div data-ui-view></div> -->
+    <data-social-share></data-social-share>
     <div data-wave></div>
     <div data-soundcloud-new-track></div>
     <!-- <button class="submit-button rs-link"
