--- a/partials/home.less
+++ b/partials/home.less
@@ -2,9 +2,11 @@
     position: relative;
     padding-top:  50px;
 	height: 100vh;
-    background-image: url("http://res.cloudinary.com/www-drvaudio-com/image/upload/v1473895286/studio_gin46m.png");
+   background-image: url("http://res.cloudinary.com/www-drvaudio-com/image/upload/c_scale,w_1265/v1475906881/Direct-Record-Video-Audio3_mihbxv.png");
     background-size: 70%;
-    .mobile & { background-size: 100%; }
+    opacity: 0.6;
+
+   .mobile & { background-size: 100%; }
     background-position: center;
     background-repeat: no-repeat;
 
