Added background contain for a better display.

--- a/partials/home.less
+++ b/partials/home.less
@@ -3,8 +3,7 @@
     padding-top:  50px;
 	height: 100vh;
     background-image: url("http://res.cloudinary.com/www-drvaudio-com/image/upload/v1473895286/studio_gin46m.png");
-    background-size: 70%;
-    .mobile & { background-size: 100%; }
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 
