Added new RSS feeds.

--- a/partials/home.html
+++ b/partials/home.html
@@ -9,7 +9,7 @@
         data-link-desktop="Switch to desktop version">
         Switch to desktop version
     </button> -->
-    <!-- <div data-rss-feed data-news="''"> -->
+    <div data-rss-feed data-news="feed.xml">
 
     </div>
 </div>
