--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -46,8 +46,19 @@
                 display: inline-block;
             }
             > .track-info-container {
+                position: relative;
+                > .overlay-wave {
+                    width: 0;
+                    .transition(@prop: width, @time: .3s);
+                    background-color: rgba(32,32,32,.7);
+                    height: 30px;
+                    position: absolute;
+                }
                 > .waveform {
                     display: block;
+                    width: 80vw;
+                    height: 30px;
+                    .mobile & { width: 70vw; }
                 }
                 > .track-name {
                     font-size: 20px;
