Added a height for the twitter widget.

--- a/css/app.less
+++ b/css/app.less
@@ -32,7 +32,7 @@
 
 @standard_padding: 55px;
 @widget_height: 100px;
-@twitter_height: 250px;
+@twitter_height: 100vh;
 @nav_height: 50px;
 html {
     max-height: 720px;
