--- a/directive/social-share/social-share.less
+++ b/directive/social-share/social-share.less
@@ -1,6 +1,6 @@
 #SocialShare {
     .box(center);
-    padding: 10px 0;
+    padding: 50px 0 0 0;
 
     > .share-social-icon {
         .transition();
