--- a/partials/home.html
+++ b/partials/home.html
@@ -2,11 +2,13 @@
     <!-- <div data-ui-view></div> -->
     <data-social-share></data-social-share>
     <div data-wave></div>
-    <div data-soundcloud-new-track></div>
-    <!-- <button class="submit-button rs-link"
+    <!-- <div data-soundcloud-new-track></div> -->
+    <div class="vertical-ribbon" vertical-ribbon></div>
+    <button class="submit-button rs-link"
         data-ng-if="model.is_mobile"
         data-ng-click="model.is_mobile = !model.is_mobile"
         data-link-desktop="Switch to desktop version">
         Switch to desktop version
-    </button> -->
+    </button>
+    <div class="home-image"></div>
 </div>
