--- a/directive/social-share/social-share.less
+++ b/directive/social-share/social-share.less
@@ -3,7 +3,7 @@
     padding: 50px 0 0 0;
 
     > .share-social-icon {
-        .transition();
+        .drv-transition();
         display: inline-block;
         padding: 0 30px;
         opacity: .7;
