--- a/directive/playlist/playlist.less
+++ b/directive/playlist/playlist.less
@@ -49,7 +49,7 @@
                 position: relative;
                 > .overlay-wave {
                     width: 0;
-                    .transition(@prop: width, @time: .3s);
+                    .drv-transition(@prop: width, @time: .3s);
                     background-color: rgba(32,32,32,.7);
                     height: 30px;
                     position: absolute;
